--- a/assets/styles.css
+++ b/assets/styles.css
@@ -23,7 +23,6 @@ body {
   color: #333;
 }
 
-h1,
 h2,
 h3,
 h4,
@@ -34,13 +33,11 @@ a,
 ul,
 span,
 li,
-img,
-button {
+img {
   margin: 0;
   padding: 0;
 }
 
-h1,
 h2,
 h3,
 h4,
@@ -50,7 +47,6 @@ h6 {
   font-weight: inherit;
 }
 
-h1,
 h2,
 h3 {
   font-family: "Poppins", cursive;
@@ -61,11 +57,6 @@ p {
   font-size: 1.05em;
   font-weight: 400;
   color: #777;
-}
-
-h1 {
-  font-size: 4em;
-  line-height: 1;
 }
 h2 {
   font-size: 2.2em;
@@ -85,8 +76,7 @@ h6 {
   letter-spacing: 1px;
 }
 
-a,
-button {
+a {
   display: inline-block;
   text-decoration: none;
   color: inherit;
@@ -96,11 +86,7 @@ button {
 
 a:focus,
 a:active,
-a:hover,
-button:focus,
-button:active,
-button:hover,
-a b.light-color:hover {
+a:hover {
   text-decoration: none;
   color: #2056a4;
 }
@@ -122,21 +108,10 @@ span {
   display: inline-block;
 }
 
-button {
-  outline: 0;
-  border: 0;
-  background: none;
-  cursor: pointer;
-}
-
 .icon {
   font-size: 1.1em;
   display: inline-block;
   line-height: inherit;
-}
-
-b.max-bold {
-  font-weight: 700;
 }
 
 .section {
@@ -157,28 +132,8 @@ b.max-bold {
   background: #2056a4;
 }
 
-.margin-t-10 {
-  margin-top: 10px;
-}
-
-.margin-b-30 {
-  margin-bottom: 30px;
-}
-.margin-b-50 {
-  margin-bottom: 50px;
-}
-
-.margin-tb-30 {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.font-yellow {
+.font-blue {
   color: #2056a4;
-}
-
-.font-semi-white {
-  color: #ddd;
 }
 
 .font-lite-black {
@@ -276,13 +231,13 @@ header .downlad-btn:hover {
 .intro {
   position: relative;
   z-index: 2;
-  padding: 20px;
+  padding: 30px 20px;
   margin-top: 100px;
   text-align: center;
   background: #fff;
   box-shadow: 10px 10px 80px rgba(0, 0, 0, 0.1), -10px -10px 80px -20px rgba(0, 0, 0, 0.1);
-  outline: 1px solid #f0f0f0;
-  outline-offset: -15px;
+  outline: 1px solid #faf9f9;
+  outline-offset: -10px;
 }
 
 .intro .profile-img {
@@ -297,7 +252,7 @@ header .downlad-btn:hover {
   overflow: hidden;
   margin: 0 auto;
   position: relative;
-  top: -100px;
+  top: -130px;
   margin-bottom: -70px;
 }
 .intro .profile-img img {
@@ -305,6 +260,7 @@ header .downlad-btn:hover {
   height: 100%;
   border-radius: 100%;
   object-fit: cover;
+  filter: grayscale(100%);
 }
 .intro .information > li {
   display: block;
@@ -398,34 +354,19 @@ header .downlad-btn:hover {
 5. ABOUT SECTION
 --------------------------------- */
 
-.radial-progress {
+.about-section .box .chart {
   position: relative;
-  max-width: 200px;
-  margin: 0 auto;
-}
-
-.radial-progress .progressbar-text {
-  font-size: 2.2em;
-  font-weight: 500;
-  padding-bottom: 25px !important;
-  color: #333 !important;
-}
-
-.radial-progress .progressbar-text:after {
-  content: "%";
-}
-
-.radial-progress .progress-title {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  font-size: 1.2rem;
+  font-weight: 600;
   width: 100%;
-  letter-spacing: 0;
-  text-align: center;
-  transform: translate(-50%, 15px);
-  color: #777;
+  margin: auto;
 }
 
+.about-section .box .chart canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 /* ---------------------------------
 6. COUNTER SECTION
 --------------------------------- */
@@ -450,6 +391,12 @@ header .downlad-btn:hover {
   background: rgba(0, 0, 0, 0.5);
 }
 
+@media (max-width: 775px) {
+.counter-section .counter .title {
+  font-size: 1.5rem;
+  }
+}
+
 /* ---------------------------------
 7. FOOTER
 --------------------------------- */
@@ -457,7 +404,7 @@ header .downlad-btn:hover {
 .copyright {
   text-align: center;
   padding: 30px 0;
-  background: #e7e7e7;
+  background: #fff;
   color: #000 !important;
 }
 .copyright span {
