--- a/assets/styles.css
+++ b/assets/styles.css
@@ -164,7 +164,7 @@ span {
   mix-blend-mode: difference;
 }
 .scroll-to-top.show {
-  opacity: .8;
+  opacity: 0.8;
   visibility: visible;
 }
 .scroll-to-top.show:hover {
@@ -586,3 +586,107 @@ footer .social-icons li a {
   border: none;
   color: #fff;
 }
+
+
+/* SCROLL ANIMATION STUFF */
+
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+
+/* FADE IN LEFT */
+
+.fadeIn {
+  animation-name: fadeIn;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+/* FADE IN LEFT */
+
+.fadeInLeft {
+  animation-name: fadeInLeft;
+}
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+/* FADE IN RIGHT */
+
+.fadeInRight {
+  animation-name: fadeInRight;
+}
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+/* FADE IN UP */
+
+.fadeInUp {
+  animation-name: fadeInUp;
+}
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* FADE IN DOWN */
+
+.fadeInDown {
+  animation-name: fadeInDown;
+}
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* ROLL IN */
+
+.rollIn {
+  animation-name: rollIn;
+}
+@keyframes rollIn {
+  from {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
